--- a/css/main.css
+++ b/css/main.css
@@ -102,8 +102,7 @@ main .main-input input {
 }
 
 main .main-input-container:hover {
-    box-shadow: 0 1.5px 6px 0 #dfe1e6;
-
+    border: 0 1.5px 6px 0 #dfe1e6;
 }
 
 main .main-input .search-icon {
@@ -133,7 +132,7 @@ main .main-buttons div {
 main .main-buttons button {
     height: 35px;
     background-color: #f3f2f2;
-    border: 0;
+    border: transparent;
     font-size: 14px;
     color: #5f6368;
     cursor: pointer;
@@ -142,7 +141,7 @@ main .main-buttons button {
 }
 
 main .main-buttons button:hover {
-    border: 1px solid #c6c6c6;
+    border: #c6c6c6;
     box-shadow: 0px 1px 1px rgba(0,0,0,0.1);
     color: #222;
     background-color: #f8f8f8;
@@ -181,5 +180,5 @@ footer ul li a {
 }
 
 footer ul li a:hover {
-    border-bottom: 1px solid #70757a;
+    border-bottom: 1px solid #70757a
 }
